--- a/paymentForm.html
+++ b/paymentForm.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <div class="container">
+        <div class="card-container">
+
+            <div class="front">
+                <div class="image">
+                    <img src="omage" alt="">
+                </div>
+            </div>
+
+        </div>
         <form action="">
             <div class="inputBox">
                 <span>card number</span>
@@ -17,7 +26,7 @@
                 <span>card holder</span>
                 <input type="text" class="card-holder-input">
             </div>
-            <div class="flexbox">
+            <div class="flexBox">
                 <div class="inputBox">
                     <span>expiration mm</span>
                     <select name="" id="" class="month-input">
