--- a/paymentForm.html
+++ b/paymentForm.html
@@ -12,7 +12,8 @@
 
             <div class="front">
                 <div class="image">
-                    <img src="omage" alt="">
+                    <img src="image" alt=""> 
+                    <img src="image" alt=""> 
                 </div>
             </div>
 
