added the choose plan field

--- a/paymentForm.html
+++ b/paymentForm.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="card-container">
-
-            <div class="front">
-                <div class="image">
-                    <img src="image" alt=""> 
-                    <img src="image" alt=""> 
+        <form action="">
+            <div class="flexBox">
+                <div class="inputBox">
+                    <span>choose plan</span>
+                    <select name="" id="" class="plan-input">
+                        <option value="plan" selected disabled>plan</option>
+                        <option value="2-portions">2-portions</option>
+                        <option value="4-portions">4-portions</option>
+                    </select>
                 </div>
             </div>
-        </div>
-        <form action="">
             <div class="inputBox">
                 <span>card number</span>
                 <input type="text" maxlength="16" class="card-number-input">
